--- a/InfoTrack.SearchEngine.PageRanker.Web/ClientApp/src/custom.css
+++ b/InfoTrack.SearchEngine.PageRanker.Web/ClientApp/src/custom.css
@@ -12,3 +12,25 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+.search-history-item {
+    margin: 1em 0 2em;
+    padding-top: 2em;
+}
+.search-history-item .search-result {
+    flex-grow: 1;
+    border-radius: 10px;
+    max-width: 30%;
+    padding: 1rem;
+    margin-top: 1.5rem;
+    font-size: 4rem;
+    line-height: 1;
+    text-align: center;
+}
+.search-history-item .search-result small {
+    display: block;
+    font-size: 0.95rem;
+}
+.search-history-item + .search-history-item {
+    border-top: 1px dashed rgba(0, 0, 0, .25);
+}
