--- a/InfoTrack.SearchEngine.PageRanker.Web/ClientApp/src/custom.css
+++ b/InfoTrack.SearchEngine.PageRanker.Web/ClientApp/src/custom.css
@@ -31,6 +31,9 @@ code {
     display: block;
     font-size: 0.95rem;
 }
+.search-history-item .search-result.not-found {
+    color: #C00;
+}
 .search-history-item + .search-history-item {
     border-top: 1px dashed rgba(0, 0, 0, .25);
 }
